atualização da page videos

--- a/filiais.html
+++ b/filiais.html
@@ -32,7 +32,9 @@
 
 
                     <link rel="stylesheet" href="assets/owlcarousel/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/owlcarousel/css/owl.theme.default.min.css"> 		
+    <link rel="stylesheet" href="assets/owlcarousel/css/owl.theme.default.min.css"> 
+
+        <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">		
     
        
 </head>
@@ -45,7 +47,11 @@
 	<div class="container">
         <div class="row">
             <div class="col-md-12">
-                <span class="navmail"><i class="nav-ss">contato@blueenergyengenharia.com |</i> (34) 2589-5843</span>
+                <span class="navmail">
+                  <a href="https://www.facebook.com/blueenergyengenharia/" target="_blank"><i class="fab fa-facebook-f social-header"></i></a>
+                  <a href="https://api.whatsapp.com/send?phone=5534992372333" target="_blank"><i class="fab fa-whatsapp social-header"></i></a>
+                  <a href="https://www.youtube.com/channel/UCCYsAn4EMeRdEkMlh_KLwkw" target="_blank"><i class="fab fa-youtube social-header"></i></a>
+                  <i class="nav-ss">contato@blueenergyengenharia.com |</i> (34) 2589-5843</span>
             </div>
         </div>	
 		<div class="row">
