page engenharia atualizando

--- a/engenharia.html
+++ b/engenharia.html
@@ -104,7 +104,7 @@
 <div class="page-sobre">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12" style="font-size: 1.2em">
                 
                 <strong>ENGENHARIA CIVIL</strong><br>
                 A Blue Energy é capacitada, habilitada e qualificada para solucionar qualquer demanda de engenharia civil, sendo ela industrial, residencial ou rural. Nós temos o que é preciso para elaborar projetos estruturais, arquitetônicos, hidros sanitários, também executamos regularização de imóveis, vistoria de imóveis com emissão de laudos técnicos, executamos reformas, gerenciamos e acompanhamos sua obra do início ao fim, sempre respeitando as normas técnicas regulamentadas. Para maiores informações entre em contato pelo e-mail ou telefone.<br><br>
