social no sidebar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 	<a href="https://www.facebook.com/blueenergyengenharia/" target="_blank"><i class="fab fa-facebook-f social-header"></i></a>
                 	<a href="https://api.whatsapp.com/send?phone=5534992372333" target="_blank"><i class="fab fa-whatsapp social-header"></i></a>
                 	<a href="https://www.youtube.com/channel/UCCYsAn4EMeRdEkMlh_KLwkw" target="_blank"><i class="fab fa-youtube social-header"></i></a>
-                	<i class="nav-ss">contato@blueenergyengenharia.com |</i> (34) 2589-5843</span>
+                	<i class="nav-ss">contato@blueenergyengenharia.com |</i> (34) 2589-5843
+                </span>
             </div>
         </div>
 		<div class="row">           
@@ -78,10 +79,11 @@
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="videos.html">Vídeos</a></li>
                     <li><a href="filiais.html">Filiais</a></li>
-                    <li><a href="contato.html">Contato</a></li>			
+                    <li><a href="contato.html">Contato</a></li>	                   	
 			</div>
 			
-            <div class="sidebar">               
+            <div class="sidebar"> 
+
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
@@ -91,12 +93,20 @@
                     <li><a href="videos.html">Vídeos</a></li>
                     <li><a href="filiais.html">Filiais</a></li>
                     <li><a href="contato.html">Contato</a></li>
+
+                    <span class="soc">
+                	<a href="https://www.facebook.com/blueenergyengenharia/" target="_blank"><i class="fab fa-facebook-f social-header"></i></a>
+            		<a href="https://api.whatsapp.com/send?phone=5534992372333" target="_blank"><i class="fab fa-whatsapp social-header"></i></a>
+                	<a href="https://www.youtube.com/channel/UCCYsAn4EMeRdEkMlh_KLwkw" target="_blank"><i class="fab fa-youtube social-header"></i></a>                							
+                    </span>	
                 </ul>
                 
                 <div class="sidebar-btn">
                     <div class="sid2">MENU</div>
                     <span></span>
                 </div>
+
+
             </div>
 
 		</div>
