--- a/contato.html
+++ b/contato.html
@@ -86,6 +86,12 @@
                     <li><a href="videos.html">Vídeos</a></li>
                     <li><a href="filiais.html">Filiais</a></li>
                     <li><a href="contato.html">Contato</a></li>
+
+                    <span class="soc">
+                  <a href="https://www.facebook.com/blueenergyengenharia/" target="_blank"><i class="fab fa-facebook-f social-header"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5534992372333" target="_blank"><i class="fab fa-whatsapp social-header"></i></a>
+                  <a href="https://www.youtube.com/channel/UCCYsAn4EMeRdEkMlh_KLwkw" target="_blank"><i class="fab fa-youtube social-header"></i></a>                             
+                    </span>                     
                 </ul>
                 
                 <div class="sidebar-btn">
