--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 			<div class="row">
 				<div class="col-md-2"></div>
 					<div class="col-md-8">				
-						<span class="tag-center">
-							Reduzimos sua conta de energia em até 95 %!
+						<span class="tag-center" style="font-family: sans-serif !important;">
+							<a href="" data-toggle="modal" data-target="#modal-residencial">Reduza sua conta de energia em até 95%!</a>
 						</span>
 					</div>
 				<div class="col-md-2"></div>
