add instagram das pages

--- a/sobre.html
+++ b/sobre.html
@@ -50,6 +50,7 @@
                   <a href="https://www.facebook.com/blueenergyengenharia/" target="_blank"><i class="fab fa-facebook-f social-header"></i></a>
                   <a href="https://api.whatsapp.com/send?phone=5534992372333" target="_blank"><i class="fab fa-whatsapp social-header"></i></a>
                   <a href="https://www.youtube.com/channel/UCCYsAn4EMeRdEkMlh_KLwkw" target="_blank"><i class="fab fa-youtube social-header"></i></a>
+                  <a href="https://www.instagram.com/blueenergy.engenharia/" target="_blank"><i class="fab fa-instagram social-header"></i></a>                  
                   <i class="nav-ss">contato@blueenergyengenharia.com |</i> (34) 2589-5843</span>
             </div>
         </div>	
@@ -88,7 +89,8 @@
                     <span class="soc">
                   <a href="https://www.facebook.com/blueenergyengenharia/" target="_blank"><i class="fab fa-facebook-f social-header"></i></a>
                 <a href="https://api.whatsapp.com/send?phone=5534992372333" target="_blank"><i class="fab fa-whatsapp social-header"></i></a>
-                  <a href="https://www.youtube.com/channel/UCCYsAn4EMeRdEkMlh_KLwkw" target="_blank"><i class="fab fa-youtube social-header"></i></a>                             
+                  <a href="https://www.youtube.com/channel/UCCYsAn4EMeRdEkMlh_KLwkw" target="_blank"><i class="fab fa-youtube social-header"></i></a>
+                  <a href="https://www.instagram.com/blueenergy.engenharia/" target="_blank"><i class="fab fa-instagram social-header"></i></a>                                               
                     </span>                     
                 </ul>
                 
